JD and some changes